# ai-six-months

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.ai/: system_instructions.md
.ai/agents/: eval_agent.md  phase1_at_tutor.md  phase2_rag_tutor.md  phase3_ops_tutor.md
.claude/: context_profile.json
backend/: __init__.py
backend/agents/: orchestrator.py
backend/core/: __init__.py  config.py  exceptions.py  logging.py
backend/llm_client/: __init__.py  anthropic_client.py  base.py  deepseek_client.py  ollama_client.py  openai_client.py
backend/rag_pipeline/: __init__.py  engine.py  query_processor.py
backend/vector_store/: __init__.py  base.py  chroma_store.py  client.py  pg_vector.py
data/documents/: sample.md
docs/: CURRICULUM.md  FOLDER_STRUCTURE.md  LEARNING_HANDBOOK.md  RAG_ARCHITECTURE.md  SKILLS.md
docs/reference/: README.md
examples/: 01_basic_rag.py  02_hybrid_search.py  03_agentic_pipeline.py  run_advanced_rag.py
python-learning/practice/: Untitled.ipynb
